--- a/test/react/history/index.html
+++ b/test/react/history/index.html
@@ -7,9 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<!-- <script src="./index.js" type="module"></script> -->
-		<script>
-			window.addEventListener('popstate', e => console.log(e))
-		</script>
+		<div id="root"></div>
+		<script src="./index.js" type="module"></script>
 	</body>
 </html>
